[UPD] html and css updated

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Simon Says</title>
 </head>
 <body>
+    <main>
+        <h2>Hai 30 secondi per memorizzare questi 5 numeri</h2>
+        <p id="timeout"></p>
+        <ul class="random"></ul>
+    </main>
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
